# mentorship-streamlit

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  auxiliary_functions.py  avg_screentime.ipynb  package-lock.json  pyproject.toml  requirements.txt  streamlit-app.py  streamlit.ps1  streamlit_app.py  testing.ipynb
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: ruff.yml
dashboards/: avg_screentime.py  categorical_analysis.py  clicks_and_impressions.py  detailed_info.py  detailed_info_2.py  detailed_info_3.py  duckdb_shell.py  es_eda.py  industry_analysis.py  umami_eda.py  visits_filter.py
pages/: application.py  avg_screentime.py  demo.py  detailed information.py  detailed_info.py  home.py  traffic.py
utils/: duckdb.py
