[tool.poetry]
name = "mentorship-streamlit"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
streamlit = "^1.34.0"
st-pages = "^0.4.5"
mysqlclient = "^2.2.4"
SQLAlchemy = "^2.0.30"
plotly = "^5.24.0"
pandas = "^2.2.2"
numpy = "^2.1.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"
black = "^24.4.2"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
