[tool.poetry]
name = "mentorship-streamlit"
description = ""
license = "MIT License"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.11"
streamlit = "^1.34.0"
mysqlclient = "^2.2.4"
SQLAlchemy = "^2.0.36"
plotly = "^5.24.0"
pandas = "^2.2.2"
numpy = "^2.1.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
ruff = "^0.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
